# web_scraping

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
scraped_file/: biologyma_ms.txt  business_administration_with_accounting_concentrationmba.txt  business_administration_with_energy_management_concentrationmba.txt  business_administrationmba.txt  business_analytics_with_accounting_concentrationmba.txt  business_analytics_with_energy_management_concentrationmba.txt  business_analyticsmba.txt  clinical_mental_health_with_school_counseling_concentrationma.txt  clinical_mental_healthma.txt  computer_sciencems.txt  criminal_justicemacj.txt  curriculum_and_instruction_with_child_and_adolescent_studies_emphasismed.txt  curriculum_and_instruction_with_minormed.txt  curriculum_and_instruction_with_resource_area_and_minormed.txt  educational_leadership_with_higher_education_administration_concentrationmed.txt  educational_leadership_with_principal_certificationmed.txt  educational_leadership_with_special_education_concentrationmed.txt  educational_leadership_with_sport_administration_concentrationmed.txt  educational_leadership_with_superintendent_certificationedd.txt  educational_leadershipedd.txt  educational_leadershipmed.txt  englishma_ms.txt  exercise_physiologymsep.txt  family_nurse_practitionermsn.txt  geosciencesms.txt  health_services_administrationmha.txt  historyma.txt  human_resource_development_with_training_and_development_concentrationma.txt  human_resource_developmentma.txt  industrial_technologyms.txt  professional_studiesmps.txt  (+9 more)
src/: test.py
(+8 files in other folders)
